snapshots/parsers/cst/loop_statements/while_with_doevents.snap
---
source: src/parsers/cst/loop_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: WhileStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: WhileKeyword
                  text: While
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: processing
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: CallStatement
                      children:
                        - kind: Identifier
                          text: DoEvents
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "        "
                    - kind: CallStatement
                      children:
                        - kind: Identifier
                          text: CheckStatus
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: WendKeyword
                  text: Wend
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
